# current_club

./: README.md  docker-compose.yml  pyproject.toml
src/: manage.py  matches.json  schema.yml  suites.json
src/KcCurrent/: asgi.py  settings.py  urls.py  wsgi.py
src/restfulclub/: admin.py  apps.py  business_logic.py  models.py  serializers.py  urls.py  views.py
src/restfulclub/migrations/: 0001_initial.py  0002_load_initial_data.py
src/suiteselector/: apps.py  urls.py  views.py
src/suiteselector/static/css/: current.css  styles.css
src/suiteselector/static/js/: cancelReservations.js  login.js  matches.js  registration.js  scripts.js  suites.js
src/templates/: base.html
src/templates/suiteselector/: displayReservations.html  index.html  login.html  matches.html  registration.html  reservationForm.html  reservationSuccess.html  suites.html
